SERVER-47809 Prevent createCollection as first statement in a transaction to fail with TransientTransactionError